--- a/newsandevents.htm
+++ b/newsandevents.htm
@@ -13,10 +13,10 @@
   </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="Solargy Group" />
+  <meta name="title" content="Solargy News" />
   <meta name="description"
     content="This is Solargy Group, is a rising multi-faceted company, penetrating different markets with an interest in sustainability & the drive to provide & maintain a greener future ..." />
-  <meta name="keywords" content="solargyco,solargy,Solargy Group,solar,energy" />
+  <meta name="keywords" content="News ,solargyco,solargy News,Solargy Group,solar,energy" />
   <meta name="author" content="Ahmed Mostafa , ahmedmostafakhedr31@gmail.com" />
   <meta name="subject" content="Solargy Group" />
   <meta name="copyright" content="Solargy Group" />
@@ -111,7 +111,7 @@
                 <li>
                   <a href="Solargy-Renewable/index.htm">Solargy Renewable</a>
                 </li>
-                <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                 <li><a href="coming-soon/index.html">Solargy MENA</a></li>
               </ul>
             </li>
@@ -192,6 +192,23 @@
     <section class="blog-grid">
       <div class="container">
         <div class="row justify-content-center">
+          <div class="blog-two__single mb-0" data-aos="flip-left">
+            <div class="blog-two__image">
+              <img loading="lazy" src="assets/images/news/electrifying-list.jpg" alt="electrifying News"
+                title="electrifying News" />
+              <a href="electrifying-news.htm"><i class="wastey-icon-80"></i></a>
+              <a href="electrifying-news.htm" class="blog-two__more-link">Read More</a>
+            </div>
+            <div class="blog-two__content">
+              <div class="blog-two__meta">
+                <a href="electrifying-news.htm"><i class="far fa-calendar-alt"></i>17-03-2025</a>
+                <a href="electrifying-news.htm"><i class="fa-solid fa-pen-to-square"></i>Amina Shafik</a>
+              </div>
+              <h3>
+                <a href="electrifying-news.htm">Electrifying the Future Starts Now</a>
+              </h3>
+            </div>
+          </div>
           <div class="blog-two__single col-lg-4 col-md-6 col-sm-12" data-aos="flip-left">
             <div class="blog-two__image">
               <img loading="lazy" src="assets/images/news/e2.jpg" alt="News Image" title="News" />
@@ -494,7 +511,7 @@
       </nav>
 
       <p>
-        © 2024 جميع الحقوق محفوظة
+        © 2025 جميع الحقوق محفوظة
         <a href="index.htm" class="text-light">Solargy</a>
         <br />
       </p>
