--- a/Parklios-Seminar.htm
+++ b/Parklios-Seminar.htm
@@ -113,7 +113,7 @@
                 <li>
                   <a href="Solargy-Renewable/index.htm">Solargy Renewable</a>
                 </li>
-                <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                 <li><a href="coming-soon/index.html">Solargy MENA</a></li>
               </ul>
             </li>
@@ -478,7 +478,7 @@
                   <li><a href="mobility/index.htm">Solargy E-Mobility</a></li>
                   <li><a href="Solargy-Renewable/index.htm">Solargy Renewable</a></li>
                   <li> <a href="Solargy-Construction/index.html">Solargy Construction</a></li>
-                  <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                  <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                   <li><a href="coming-soon/index.html">Solargy MENA</a></li>
                 </ul>
               </div>
@@ -599,7 +599,7 @@
 
 
       <p>
-        © 2023 All Rights Reserved by
+        © 2025 All Rights Reserved by
         <a class="text-light" href="index.htm">Solargy.</a>
         <br>
 
