--- a/terms-and-conditions-ar.htm
+++ b/terms-and-conditions-ar.htm
@@ -118,7 +118,7 @@
                 <li>
                   <a href="Solargy-Renewable/index.htm">Solargy Renewable</a>
                 </li>
-                <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                 <li><a href="coming-soon/index.html">Solargy MENA</a></li>
               </ul>
             </li>
@@ -328,7 +328,7 @@
                   <li>
                     <a href="Solargy-Construction/index.html">Solargy Construction</a>
                   </li>
-                  <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                  <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                   <li><a href="coming-soon/index.html">Solargy MENA</a></li>
                 </ul>
               </div>
@@ -404,7 +404,7 @@
       <div class="site-footer__bottom">
         <div class="container">
           <p>
-            © 2024 جميع الحقوق محفوظة
+            © 2025 جميع الحقوق محفوظة
             <a href="index.htm" class="text-light">Solargy</a>
             <br />
             <!-- Powered By
@@ -446,7 +446,7 @@
       </nav>
 
       <p>
-        © 2024 جميع الحقوق محفوظة
+        © 2025 جميع الحقوق محفوظة
         <a class="text-light" href="index.htm-ar">Solargy.</a>
         <br />
       </p>
