--- a/terms-and-conditions.htm
+++ b/terms-and-conditions.htm
@@ -116,7 +116,7 @@
                 <li>
                   <a href="Solargy-Renewable/index.htm">Solargy Renewable</a>
                 </li>
-                <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                 <li><a href="coming-soon/index.html">Solargy MENA</a></li>
               </ul>
             </li>
@@ -334,7 +334,7 @@
                   <li>
                     <a href="Solargy-Construction/index.html">Solargy Construction</a>
                   </li>
-                  <li><a href="coming-soon/index.html">Solargy Trade</a></li>
+                  <li><a href="solargy-trading/index.html">Solargy Trading</a></li>
                   <li><a href="coming-soon/index.html">Solargy MENA</a></li>
                 </ul>
               </div>
@@ -450,7 +450,7 @@
       </nav>
 
       <p class="mb-5">
-        © 2024 All Rights Reserved by
+        © 2025 All Rights Reserved by
         <a class="text-light" href="index.htm">Solargy.</a>
         <br />
       </p>
