--- a/Solargy-Renewable/projects.htm
+++ b/Solargy-Renewable/projects.htm
@@ -973,10 +973,37 @@
 
 
     <section class="projects-banner" style="height: 80vh;overflow: hidden;">
-      <video autoplay loop muted id="myVideoo" style="height: auto;top: -45vh;">
+      <!-- <video autoplay loop muted id="myVideoo" style="height: auto;top: -45vh;">
         <source src="assets/videos/khataba-new.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
-      </video>
+      </video> -->
+      <style>
+        .video-container {
+          position: relative;
+          width: 100%;
+          /* max-width: 800px; */
+          margin: 0 auto;
+          padding-bottom: 56.25%;
+          height: 0;
+          overflow: hidden;
+        }
+
+        .video-container iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          pointer-events: none;
+        }
+      </style>
+      <div class="video-container">
+        <iframe width="100%" height="100%" id="myVideo" class="_video-banner"
+          src="https://www.youtube.com/embed/t_sLzgl2t3k?si=oRwzMOHv9bWmlyki&autoplay=1&loop=1&mute=1"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
       <!-- <div class="content">
         <button id="myBtn" onclick="myFunction()">Pause</button>
       </div> -->
