Re-Upload Trading

--- a/solargy-trading/1delta.html
+++ b/solargy-trading/1delta.html
@@ -222,7 +222,7 @@
 
 
 											<li>
-												<a href="#.">Electric Chargers</a>
+												<a href="#.">EV Chargers</a>
 												<ul>
 													<li>
 														<a href="rolec.html">Rolec</a>
