--- a/solargy-trading/HIS.html
+++ b/solargy-trading/HIS.html
@@ -13,10 +13,10 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Solargy Trading | HIS</title>
-	<meta name="title" content="Solargy Trading" />
+	<title>Solargy Trading | HIS Solar Cables</title>
+	<meta name="title" content="HIS Solar Cables" />
 	<meta name="description"
-		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants" />
+		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants,HIS Solar Cables" />
 	<meta name="keywords" content="solargyco,solargy,Solargy Group,solar,energy" />
 	<meta name="author" content="Ahmed Mostafa , ahmedmostafakhedr31@gmail.com" />
 	<meta name="subject" content="Solargy Trading" />
@@ -147,7 +147,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -188,7 +188,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -360,7 +360,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 text-center text-md-left">
-							<h1 class="cornered-heading">HIS</h1>
+							<h1 class="cornered-heading">HIS Solar Cables</h1>
 						</div>
 						<div class="col-md-6 text-center text-md-right">
 							<ol class="breadcrumb">
@@ -371,7 +371,7 @@
 									<a href="products.html">Products </a>
 								</li>
 
-								<li class="active">HIS</li>
+								<li class="active">HIS Solar Cables</li>
 							</ol>
 						</div>
 					</div>
@@ -384,25 +384,25 @@
 						<div class="col-sm-12">
 							<img src="his.jpg" alt="HIS" class="alignleft">
 
-							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">HIS </h2>
+							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">HIS Solar Cables </h2>
 							<div class="d-flex bottommargin_20 ">
 								<p class="product_meta">
-									<span class="posted_in">Category: <a href="#." rel="tag">Cables</a></span>
+									<span class="posted_in">Category: <a href="#." rel="tag">Solar Products</a></span>
 
 								</p>
 							</div>
 							<p class="mb-3">
-								When it comes to wiring and interconnecting PV plants and power plants, leading
-								companies in the PV industry rely on tailor-made ready-to-plug solutions from HIS. Aside
-								from the head office in Germany, HIS Renewables has several branches in all the relevant
-								markets from where it supplies and looks after its local customers.
+								HIS Renewables is a leading manufacturer of high-quality solar cables and
+								interconnection solutions for PV plants and power plants. With 20 years of experience,
+								HIS cables are designed to provide maximum efficiency, durability, and safety in solar
+								energy systems.
 							</p>
 
 
 
 
 
-							<div class="d-flex justify-content-between">
+							<div class="d-flex justify-content-between align-items-center my-5">
 								<div class="inline-block mr-lg-1">
 									<ul class="list2">
 										<li>
@@ -438,12 +438,11 @@
 								</div>
 
 
-
+								<img src="images/partners/his.png" alt="Growatt" class="alignleft d-block"
+									style="height: auto;width: auto;">
 
 							</div>
-							<div class="container mt-5">
-								<hr style="border:2px dashed #ccc;background-color: unset;height: 0;" />
-							</div>
+
 						</div>
 					</div>
 				</div>
