--- a/solargy-trading/ZNSHINE.html
+++ b/solargy-trading/ZNSHINE.html
@@ -13,10 +13,10 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Solargy Trading | ZNSHINE</title>
-	<meta name="title" content="Solargy Trading" />
+	<title>Solargy Trading | Solar Panels</title>
+	<meta name="title" content="Solargy Trading || Solar Panels" />
 	<meta name="description"
-		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants" />
+		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants,Solar Panels" />
 	<meta name="keywords" content="solargyco,solargy,Solargy Group,solar,energy" />
 	<meta name="author" content="Ahmed Mostafa , ahmedmostafakhedr31@gmail.com" />
 	<meta name="subject" content="Solargy Trading" />
@@ -149,7 +149,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -190,7 +190,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -362,7 +362,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 text-center text-md-left">
-							<h1 class="cornered-heading">ZNSHINE</h1>
+							<h1 class="cornered-heading">Solar Panels</h1>
 						</div>
 						<div class="col-md-6 text-center text-md-right">
 							<ol class="breadcrumb">
@@ -373,7 +373,7 @@
 									<a href="products.html">Products </a>
 								</li>
 
-								<li class="active">ZNSHINE</li>
+								<li class="active">Solar Panels</li>
 							</ol>
 						</div>
 					</div>
@@ -386,31 +386,21 @@
 						<div class="col-sm-12">
 							<img src="TP132.png" alt="" class="alignleft">
 
-							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">ZNSHINE </h2>
+							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Solar Panels </h2>
 							<div class="d-flex bottommargin_20 ">
 								<p class="product_meta">
-									<span class="posted_in">Category: <a href="#." rel="tag">Solar Panels</a></span>
+									<span class="posted_in">Category: <a href="#." rel="tag">Solar Products</a></span>
 
 								</p>
 							</div>
 							<p class="mb-3">
-								Founded in 1988, ZNSHINE SOLAR (NEEQ Code: 838463) is a leading PV project developer and
-								solar panel manufacturer, well-known for delivering the best O&M service and EPC
-								solutions. Having been recognized as one of the “Green Plants” by the Ministry of
-								Industry and Information Technology, ZNSHINE owns a state-of-the-art, fully automated
-								production line. The company is also recognized as “China's Well-Known Trademark". After
-								its successful OTC in 2016, ZNSHINE has become the No. 1 PV company on NEEQ in terms of
-								market share; moreover, it is listed by Bloomberg.
+								ZNSHINE SOLAR is a globally recognized Tier 1 solar panel manufacturer and PV project
+								developer, specializing in high-efficiency polycrystalline and mono PERC solar panels.
+								With over 32 years of experience, ZNSHINE is committed to delivering top-quality solar
+								solutions for residential, commercial, and utility-scale projects worldwide.
 							</p>
 
-
-							<p class="mb-3">
-								ZNSHINE aims to be one of the largest global utility scale solar project developers and
-								manufacturers. It already has its global footprints in Japan, India, Germany, Italy,
-								Switzerland, UK, USA, Canada, Chile, Australia and Africa.
-							</p>
-
-							<div class="d-flex justify-content-between">
+							<div class="d-flex justify-content-between align-items-center">
 								<div class="inline-block mr-lg-1">
 									<ul class="list2">
 										<li>
@@ -425,11 +415,6 @@
 										<li>
 											6GW production capacity
 										</li>
-
-									</ul>
-								</div>
-								<div class="inline-block mr-lg-1">
-									<ul class="list2">
 										<li>
 											EPC 1,1 GW project construction
 										</li>
@@ -442,11 +427,6 @@
 										<li>
 											Double Glass
 										</li>
-
-									</ul>
-								</div>
-								<div class="inline-block mr-lg-1">
-									<ul class="list2">
 										<li>
 											Reliable bankability
 										</li>
@@ -461,9 +441,11 @@
 										<li>
 											High efficiency
 										</li>
-
 									</ul>
 								</div>
+
+								<img src="images/partners/ZNShine-Logo.png" alt="ZNShine" class="alignleft d-block"
+									style="height: auto;width: auto;">
 							</div>
 							<div class="container">
 								<hr style="border:2px dashed #ccc;background-color: unset;height: 0;" />
@@ -719,7 +701,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p class="darklinks fontsize_14">&copy;
-								<span class="">©2025 All Rights Reserved by Solargy.</a>
+								<span class="">2025 All Rights Reserved by Solargy.</a>
 							</p>
 						</div>
 					</div>
