--- a/solargy-trading/basen.html
+++ b/solargy-trading/basen.html
@@ -149,7 +149,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -190,7 +190,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -380,52 +380,55 @@
 			<section class="ls section_padding_top_100">
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-12">
-							<img src="images/basen.png" alt="Besen" class="alignleft"
-								style="height: 350px;width: 350px;">
+						<div class="col-sm-12 d-flex justify-content-between align-items-start">
+							<img src="images/basen.png" alt="Besen" class="col-lg-4 p-5">
+							<div class="col-lg-8">
+								<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Besen </h2>
+								<div class="d-flex bottommargin_20 ">
+									<p class="product_meta">
+										<span class="posted_in">Category: <a href="#." rel="tag">EV Chargers</a></span>
 
-							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Besen </h2>
-							<div class="d-flex bottommargin_20 ">
-								<p class="product_meta">
-									<span class="posted_in">Category: <a href="#." rel="tag">Electric
-											Chargers</a></span>
-
+									</p>
+								</div>
+								<p class="mb-3">
+									A professional EVSE manufacturer, BESEN focuses on providing customers with
+									professional
+									charging equipment that is safer, more efficient and more stable. BESEN's products
+									are
+									oriented to the household and commercial markets in the EV charging field,
+									including:
 								</p>
-							</div>
-							<p class="mb-3">
-								A professional EVSE manufacturer, BESEN focuses on providing customers with professional
-								charging equipment that is safer, more efficient and more stable. BESEN's products are
-								oriented to the household and commercial markets in the EV charging field, including:
-							</p>
 
 
 
 
 
 
-							<div class="d-flex justify-content-between">
-								<div class="inline-block mr-lg-1">
-									<ul class="list2">
-										<li>
-											ev chargers.
-										</li>
-										<li>
-											ev connectors.
-										</li>
-										<li>
-											OCPP chargers.
-										</li>
+								<div class="d-flex justify-content-between align-items-center my-5">
+									<div class="inline-block mr-lg-1">
+										<ul class="list2">
+											<li>
+												ev chargers.
+											</li>
+											<li>
+												ev connectors.
+											</li>
+											<li>
+												OCPP chargers.
+											</li>
 
 
 
 
-									</ul>
+										</ul>
+
+									</div>
+									<img src="images/partners/basen.png" alt="Growatt" class="alignleft d-block"
+										style="height: auto;width: auto;">
+
+
 
 								</div>
-
-
-
-
 							</div>
 						</div>
 					</div>
@@ -670,7 +673,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p class="darklinks fontsize_14">&copy;
-								<span class="">©2025 All Rights Reserved by Solargy.</a>
+								<span class="">2025 All Rights Reserved by Solargy.</a>
 							</p>
 						</div>
 					</div>
