--- a/solargy-trading/circontrol.html
+++ b/solargy-trading/circontrol.html
@@ -13,12 +13,11 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Solargy Trading | Circontrol eHome </title>
+	<title>Solargy Trading | Circontrol </title>
 	<meta name="title" content="Solargy Trading" />
 	<meta name="description"
-		content="eNext has been designed to simplify the charging process.
-		We developed an authorization method via app that allows the user to start charging without any interaction with the charger." />
-	<meta name="keywords" content="solargyco,solargy,Solargy Group,solar,energy,Circontrol eNext" />
+		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants" />
+	<meta name="keywords" content="solargyco,solargy,Solargy Group,solar,energy" />
 	<meta name="author" content="Ahmed Mostafa , ahmedmostafakhedr31@gmail.com" />
 	<meta name="subject" content="Solargy Trading" />
 	<meta name="copyright" content="Solargy Trading" />
@@ -193,16 +192,10 @@
 													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
-															<a href="rolec-wallpod.html">Rolec WallPod</a>
+															<a href="rolec.html">Rolec</a>
 														</li>
 														<li>
-															<a href="rolec-zura.html">Rolec Zura</a>
-														</li>
-														<li>
-															<a href="circontrol-eNext.html">Circontrol eNext</a>
-														</li>
-														<li>
-															<a href="circontrol-eHome.html">Circontro eHome</a>
+															<a href="circontrol.html">Circontrol</a>
 														</li>
 														<li>
 															<a href="basen.html">Besen</a>
@@ -357,12 +350,12 @@
 
 			</header>
 
-			<section id="breadcrumbs" style="background-image: url(images/circontrol-bg.jpg);"
+			<section id="breadcrumbs" style="background-image: url(E-next.png);"
 				class="page_breadcrumbs ds parallax section_padding_65 table_section table_section_md">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 text-center text-md-left">
-							<h1 class="cornered-heading">Circontrol eHome</h1>
+							<h1 class="cornered-heading">Circontrol</h1>
 						</div>
 						<div class="col-md-6 text-center text-md-right">
 							<ol class="breadcrumb">
@@ -373,7 +366,7 @@
 									<a href="products.html">Products </a>
 								</li>
 
-								<li class="active">Circontrol eHome</li>
+								<li class="active">Circontrol</li>
 							</ol>
 						</div>
 					</div>
@@ -384,10 +377,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<img src="images/eHome-list.png" alt="Circontrol eHome" class="alignleft col-lg-4"
-								style="height: auto">
+							<img src="circontrol.jpg" alt="circontrol" class="alignleft"
+								style="height: 350px;width: auto;">
 
-							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Circontrol eHome</h2>
+							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Circontrol </h2>
 							<div class="d-flex bottommargin_20 ">
 								<p class="product_meta">
 									<span class="posted_in">Category: <a href="#." rel="tag">EV Chargers</a></span>
@@ -395,12 +388,9 @@
 								</p>
 							</div>
 							<p class="mb-3">
-								Taking into account that a domestic charger is often considered an appliance, an
-								attractive design and a small size are key attributes to be addressed.
-							</p>
-							<p class="mb-3">
-								The Wallbox eHome series also offers other attributes such as low-cost, robustness, and
-								user-friendly operation.
+								A Spanish manufacturer that believes in innovation, internationalization, quality, and
+								close contact with clients to offer the best products and service at the best price.
+								Circontrol offers a world of new products in multiple product ranges, including:
 							</p>
 
 
@@ -408,47 +398,24 @@
 
 
 
-							<div class="d-flex justify-content-between align-items-center my-5">
+							<div class="d-flex justify-content-between">
 								<div class="inline-block mr-lg-1">
 									<ul class="list2">
 										<li>
-											Plug & Charge.
+											Mobility (Efficiency solutions for car parks).
 										</li>
 										<li>
+											eMobility (Intelligent recharging solutions for electric vehicles).
+										</li>
 
 
-											Universal charging socket or Type 2 tethered lead.
 
-										</li>
-										<li>
-											Up to 7.4kW charging output(s).
-										</li>
-										<li>
-											App charge authorization by Bluetooth.
-										</li>
-										<li>
-											Home Beon Compliant.
-										</li>
-										<li>
-											LED bar at the front to inform <br>the user about the charger’s status and
-											EV
-											charging status.
-										</li>
-										<li>
-											Well-designed to allow the cable to be rolled up.
-
-										</li>
-										<li>IK10 impact resistant design.
-										</li>
-
-										<li>IP 54.
-										</li>
-										<li>Designed & manufactured in Spain.</li>
 
 									</ul>
+									<div class="container mt-5">
+										<hr style="border:2px dashed #ccc;background-color: unset;height: 0;" />
+									</div>
 								</div>
-								<img src="images/partners/circontrol.png" alt="circontrol" class="alignleft d-block"
-									style="height: auto;width: auto;">
 
 
 
