--- a/solargy-trading/delpaso-solar.html
+++ b/solargy-trading/delpaso-solar.html
@@ -13,16 +13,16 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Solargy Trading | Delpaso Solar</title>
-	<meta name="title" content="Solargy Trading" />
+	<title>Solargy Trading | Solar Heater</title>
+	<meta name="title" content="Solargy Trading || Solar Heater" />
 	<meta name="description"
-		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants" />
+		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants,Solar Heater" />
 	<meta name="keywords" content="solargyco,solargy,Solargy Group,solar,energy" />
 	<meta name="author" content="Ahmed Mostafa , ahmedmostafakhedr31@gmail.com" />
 	<meta name="subject" content="Solargy Trading" />
 	<meta name="copyright" content="Solargy Trading" />
 	<meta name="language" content="English" />
-	<meta name="owner" content="Solargyco  Trading" />
+	<meta name="owner" content="Solargy  Trading" />
 	<!-- favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="logos/Trading-Icon.png" />
 	<link rel="icon" type="image/png" sizes="32x32" href="logos/Trading-Icon.png" />
@@ -147,7 +147,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -188,7 +188,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -360,7 +360,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 text-center text-md-left">
-							<h1 class="cornered-heading">Delpaso Solar</h1>
+							<h1 class="cornered-heading">Solar Heater</h1>
 						</div>
 						<div class="col-md-6 text-center text-md-right">
 							<ol class="breadcrumb">
@@ -371,7 +371,7 @@
 									<a href="products.html">Products </a>
 								</li>
 
-								<li class="active">Delpaso Solar</li>
+								<li class="active">Solar Heater</li>
 							</ol>
 						</div>
 					</div>
@@ -384,24 +384,24 @@
 						<div class="col-sm-12">
 							<img src="delpaso-solar.jpg" alt="" class="alignleft">
 
-							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Delpaso Solar </h2>
+							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Solar Heater </h2>
 							<div class="d-flex bottommargin_20 ">
 								<p class="product_meta">
-									<span class="posted_in">Category: <a href="#." rel="tag">Solar Heater</a></span>
+									<span class="posted_in">Category: <a href="#." rel="tag">Solar Products</a></span>
 
 								</p>
 							</div>
 							<p class="mb-3">
-								Dedicated exclusively to the research and development of solar thermal energy systems
-								for subsequent export, Delpaso Solar is a competitive factory, one of the leading solar
-								energy companies; equipped with one of the most modern facilities in Europe. Its quality
-								certificates make Delpaso Solar a reliable, modern and quality company.
+								The Delpaso Solar Water Heater is an advanced and efficient solar thermal energy system
+								designed for residential and commercial use. Manufactured in Spain, it is built with
+								high-quality materials and cutting-edge technology to provide reliable and sustainable
+								hot water solutions while reducing electricity consumption.
 							</p>
 
 
 
 
-							<div class="d-flex justify-content-between">
+							<div class="d-flex justify-content-between align-items-center">
 								<div class="inline-block mr-lg-1">
 									<ul class="list2">
 										<li>
@@ -430,7 +430,8 @@
 										</li>
 									</ul>
 								</div>
-
+								<img src="images/partners/delpaso-solar.png" alt="delpaso" class="alignleft d-block"
+									style="height: auto;width: auto;">
 
 							</div>
 							<div class="container mt-5">
@@ -678,7 +679,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p class="darklinks fontsize_14">&copy;
-								<span class="">©2025 All Rights Reserved by Solargy.</a>
+								<span class="">2025 All Rights Reserved by Solargy.</a>
 							</p>
 						</div>
 					</div>
