--- a/solargy-trading/delta.html
+++ b/solargy-trading/delta.html
@@ -213,7 +213,7 @@
 
 
 											<li>
-												<a href="#.">Electric Chargers</a>
+												<a href="#.">EV Chargers</a>
 												<ul>
 													<li>
 														<a href="rolec-wallpod.html">Rolec</a>
@@ -297,8 +297,7 @@
 							<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Delta </h2>
 							<div class="d-flex bottommargin_20 ">
 								<p class="product_meta">
-									<span class="posted_in">Category: <a href="#." rel="tag">Electric
-											Chargers</a></span>
+									<span class="posted_in">Category: <a href="#." rel="tag">EV Chargers</a></span>
 
 								</p>
 							</div>
