--- a/solargy-trading/schneider.html
+++ b/solargy-trading/schneider.html
@@ -148,7 +148,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -189,7 +189,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -391,8 +391,7 @@
 								<h2 class="text-uppercase topmargin_0 bottommargin_20 ">Schneider Charge</h2>
 								<div class="d-flex bottommargin_20 ">
 									<p class="product_meta">
-										<span class="posted_in">Category: <a href="#." rel="tag">Electric
-												Chargers</a></span>
+										<span class="posted_in">Category: <a href="#." rel="tag">EV Chargers</a></span>
 
 									</p>
 								</div>
@@ -687,7 +686,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p class="darklinks fontsize_14">&copy;
-								<span class="">©2025 All Rights Reserved by Solargy.</a>
+								<span class="">2025 All Rights Reserved by Solargy.</a>
 							</p>
 						</div>
 					</div>
