--- a/solargy-trading/automatic-gate-barrier.html
+++ b/solargy-trading/automatic-gate-barrier.html
@@ -13,8 +13,7 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Solargy Trading |
-		Parklio™ Automatic Gate Barrier</title>
+	<title>Solargy Trading | Parklio™ Automatic Gate Barrier</title>
 	<meta name="title" content="Solargy Trading" />
 	<meta name="description"
 		content="This is Solargy Trading, A pioneer in the trade of solar energy equipment and plants" />
@@ -149,7 +148,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -190,7 +189,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec</a>
@@ -361,40 +360,40 @@
 
 
 
-								<div class="d-flex justify-content-between">
+								<div class="d-flex justify-content-between align-items-center my-5">
 									<div class="inline-block mr-lg-1 ">
 										<ul class="list2 d-flex justify-content-between flex-wrap">
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Smartphone controlled, operated via a free app
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Long-term durability
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Digital key sharing option
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Auto-close option upon departure of the vehicle
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Accurate and safe system operation with encoder
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Automatic rising with Parklio™ Smart system
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Adjustable (3-6m) folding arms
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Quality product resistant to weather conditions
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Smooth and efficient operation
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Secure operation with safety devices
 											</li>
-											<li class="col-lg-6 my-1">
+											<li class="col-lg-12 my-1 pb-0">
 												Possibility of integration with other systems
 											</li>
 
@@ -402,7 +401,8 @@
 										</ul>
 									</div>
 
-
+									<img src="images/partners/Parklio-Logo.svg" alt="Growatt" class="alignleft d-block"
+										style="height: auto;width: auto; filter: drop-shadow(2px 4px 6px black);">
 
 
 								</div>
