--- a/solargy-trading/chain.html
+++ b/solargy-trading/chain.html
@@ -148,7 +148,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -189,7 +189,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -409,7 +409,7 @@
 
 
 
-								<div class="d-flex justify-content-between">
+								<div class="d-flex justify-content-between align-items-center my-5">
 									<div class="inline-block mr-lg-1 ">
 										<ul class="list2 d-flex justify-content-between flex-wrap">
 											<li class="col-lg-12 my-1">
@@ -444,7 +444,8 @@
 
 										</ul>
 									</div>
-
+									<img src="images/partners/Parklio-Logo.svg" alt="Growatt" class="alignleft d-block"
+										style="height: auto;width: auto; filter: drop-shadow(2px 4px 6px black);">
 
 
 
@@ -696,7 +697,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<p class="darklinks fontsize_14">&copy;
-								<span class="">©2025 All Rights Reserved by Solargy.</a>
+								<span class="">2025 All Rights Reserved by Solargy.</a>
 							</p>
 						</div>
 					</div>
