--- a/solargy-trading/parklio.html
+++ b/solargy-trading/parklio.html
@@ -149,7 +149,7 @@
 							<div class="col-md-6 ">
 								<!-- main nav start -->
 								<nav class="mainmenu_wrapper">
-									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-between">
+									<ul class="mainmenu nav sf-menu d-lg-flex justify-content-lg-end">
 										<li class="active">
 											<a href="index.html">Home</a>
 										</li>
@@ -190,7 +190,7 @@
 
 
 												<li>
-													<a href="#.">Electric Chargers</a>
+													<a href="#.">EV Chargers</a>
 													<ul>
 														<li>
 															<a href="rolec-wallpod.html">Rolec WallPod</a>
@@ -407,7 +407,7 @@
 
 
 
-							<div class="d-flex justify-content-between">
+							<div class="d-flex justify-content-between align-items-center my-5">
 								<div class="inline-block mr-lg-1">
 									<ul class="list2">
 										<li>
@@ -446,7 +446,8 @@
 								</div>
 
 
-
+								<img src="images/partners/Parklio-Logo.svg" alt="Growatt" class="alignleft d-block"
+									style="height: auto;width: auto; filter: drop-shadow(2px 4px 6px black);">
 
 							</div>
 							<!-- <div class="container mt-5">
